--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-modal": "^3.16.1",
     "react-popper": "^2.3.0",
     "react-redux": "^8.0.5",
