add new dependencies

--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,14 @@
     "react-loader-spinner": "^5.3.4",
     "react-modal": "^3.16.1",
     "react-popper": "^2.3.0",
+    "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-tiny-popover": "^7.2.4",
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
