--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
-    "mongoose": "^7.0.1"
+    "mongoose": "^7.0.1",
+    "nodemailer": "^6.9.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
