--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
     "mongoose": "^7.0.1",
     "nodemailer": "^6.9.1",
     "passport": "^0.5.3",
+    "passport-discord": "^0.1.4",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "uuid": "^9.0.0"
