--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-tiny-popover": "^7.2.4",
+    "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
