--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "mongoose": "^7.0.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "passport": "^0.5.3",
     "passport-discord": "^0.1.4",
