--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.0.0",
     "react-loader-spinner": "^5.3.4",
     "react-modal": "^3.16.1",
     "react-popper": "^2.3.0",
