--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "passport-discord": "^0.1.4",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-oauth2-refresh": "^2.2.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
