--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "socket.io-client": "^4.7.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
