--- a/compose-prod.yaml
+++ b/compose-prod.yaml
@@ -19,26 +19,26 @@ services:
     container_name: afterlife-backend
     image: $CI_REGISTRY_IMAGE/backend:$TAG
     restart: always
-#    volumes:
-#      - ./backend:/usr/src/app
+    volumes:
+      - ./server/uploads:/home/afterlife/uploads
 #      - /usr/src/app/node_modules
-    depends_on:
-      - mongo
+#    depends_on:
+#      - mongo
     networks:
       - express-mongo
       - react-express
     expose:
       - 5000
-  mongo:
-    container_name: afterlife-mongodb
-    restart: always
-    image: mongo:latest
-    volumes:
-      - ./volumes/mongo:/data/db
-    networks:
-      - express-mongo
-    expose:
-      - 27017
+#  mongo:
+#    container_name: afterlife-mongodb
+#    restart: always
+#    image: mongo:latest
+#    volumes:
+#      - ./volumes/mongo:/data/db
+#    networks:
+#      - express-mongo
+#    expose:
+#      - 27017
 networks:
   react-express:
   express-mongo:
