--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-scrollable-feed": "^1.3.2",
     "react-select": "^5.7.3",
     "react-tiny-popover": "^7.2.4",
     "react-toastify": "^9.1.3",
