--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.7.1",
+    "wavesurfer.js": "^6.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
