Deployment config is changed

--- a/compose-prod.yaml
+++ b/compose-prod.yaml
@@ -41,6 +41,9 @@ services:
       - 27017
     ports:
       - 27017:27017
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=mongoadmin
+      - MONGO_INITDB_ROOT_PASSWORD=bdung
 networks:
   react-express:
   express-mongo:
