Deployment config is changed

--- a/compose-prod.yaml
+++ b/compose-prod.yaml
@@ -40,10 +40,10 @@ services:
     expose:
       - 27017
     ports:
-      - 27017:27017
+      - 27017:27117
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=mongoadmin
-      - MONGO_INITDB_ROOT_PASSWORD=bdung
+      - MONGO_INITDB_ROOT_USERNAME: $CI_MONGO_INITDB_ROOT_USERNAME
+      - MONGO_INITDB_ROOT_PASSWORD: $CI_MONGO_INITDB_ROOT_PASSWORD
 networks:
   react-express:
   express-mongo:
