Deployment config is changed

--- a/compose-prod.yaml
+++ b/compose-prod.yaml
@@ -42,8 +42,8 @@ services:
     ports:
       - 27017:27117
     environment:
-      - MONGO_INITDB_ROOT_USERNAME: $MONGO_INITDB_ROOT_USERNAME
-      - MONGO_INITDB_ROOT_PASSWORD: $MONGO_INITDB_ROOT_PASSWORD
+      - MONGO_INITDB_ROOT_USERNAME: "$CI_MONGO_INITDB_ROOT_USERNAME"
+      - MONGO_INITDB_ROOT_PASSWORD: "$CI_MONGO_INITDB_ROOT_PASSWORD"
 networks:
   react-express:
   express-mongo:
