--- a/compose-prod.yaml
+++ b/compose-prod.yaml
@@ -40,11 +40,20 @@ services:
       - express-mongo
     expose:
       - 27017
+    # ports:
+    #   - 27017:27017
+    # environment:
+    #   MONGO_INITDB_ROOT_USERNAME: $CI_MONGO_INITDB_ROOT_USERNAME
+    #   MONGO_INITDB_ROOT_PASSWORD: $CI_MONGO_INITDB_ROOT_PASSWORD
+  mongo-express:
+    image: mongo-express
+    restart: always
     ports:
-      - 27017:27017
+      - 8081:8081
     environment:
-      MONGO_INITDB_ROOT_USERNAME: $CI_MONGO_INITDB_ROOT_USERNAME
-      MONGO_INITDB_ROOT_PASSWORD: $CI_MONGO_INITDB_ROOT_PASSWORD
+      ME_CONFIG_MONGODB_ADMINUSERNAME: afterlife
+      ME_CONFIG_MONGODB_ADMINPASSWORD: afterlife1234
+      ME_CONFIG_MONGODB_URL: mongodb://mongo:27017/
 networks:
   react-express:
   express-mongo:
