--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,7 +2,7 @@ FROM node:alpine
 WORKDIR /app
 COPY package.json ./
 COPY package-lock.json ./
-#COPY devops/volumes/env/.env_dev .env
+COPY devops/volumes/env/.env_dev .env
 RUN npm install
 COPY ./ ./
 #RUN if [ ! -f /app/.env ]; then cp /app/devops/volumes/env/.env_dev /app/.env; fi
