--- a/client/devops/volumes/nginx/common.conf
+++ b/client/devops/volumes/nginx/common.conf
@@ -29,3 +29,13 @@ location /api/ {
     proxy_set_header Host $host;
     proxy_cache_bypass $http_upgrade;
 }
+
+location /media/ {
+    proxy_pass http://backend:5000;
+    proxy_http_version 1.1;
+    proxy_redirect off;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+}
