Deployment config is changed

--- a/client/devops/volumes/nginx/common.conf
+++ b/client/devops/volumes/nginx/common.conf
@@ -30,7 +30,8 @@ location /api/ {
     proxy_cache_bypass $http_upgrade;
 }
 
-  location /media/ {
-    autoindex on;
-    alias /home/afterlife/volumes/server/uploads/media/;
-  }
+location /media/ {
+    root /home/afterlife/volumes/server/uploads/media; 
+    access_log off;
+    expires max;
+}
