--- a/compose-prod.yaml
+++ b/compose-prod.yaml
@@ -31,6 +31,20 @@ services:
       - react-express
     expose:
       - 5000
+  mongo-express:
+    container_name: afterlife-mongo-express
+    image: mongo-express
+    restart: always
+    depends_on:
+      - mongo
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: afterlife
+      ME_CONFIG_MONGODB_ADMINPASSWORD: afterlife1234
+      ME_CONFIG_MONGODB_SERVER: afterlife-mongodb
+    networks:
+      - express-mongo
   mongo:
     container_name: afterlife-mongodb
     restart: always
@@ -46,15 +60,6 @@ services:
     # environment:
     #   MONGO_INITDB_ROOT_USERNAME: $CI_MONGO_INITDB_ROOT_USERNAME
     #   MONGO_INITDB_ROOT_PASSWORD: $CI_MONGO_INITDB_ROOT_PASSWORD
-  mongo-express:
-    image: mongo-express
-    restart: always
-    ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: afterlife
-      ME_CONFIG_MONGODB_ADMINPASSWORD: afterlife1234
-      ME_CONFIG_MONGODB_URL: mongodb://mongo:27017/
 networks:
   react-express:
   express-mongo:
