--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -38,7 +38,9 @@ RUN cp /app/devops/volumes/nginx/nginx.conf /etc/nginx/nginx.conf && \
 
 RUN mkdir /usr/share/nginx/html && cp -R /app/build/* /usr/share/nginx/html
 RUN mkdir /usr/share/nginx/html/media
-RUN mkdir /var/lib/nginx/tmp && chmod +x /var/lib/nginx -R && chown -R nginx:nginx /var/lib/nginx
+RUN mkdir /var/lib/nginx/tmp
+RUN chmod +x /var/lib/nginx -R
+RUN chown -R nginx:nginx /var/lib/nginx
 
 # Expose volumes
 VOLUME ["/etc/nginx/conf.d", "/var/log/nginx", "/www"]
