Letsencrypt certs ara added.

--- a/client/devops/volumes/nginx/conf.d/default.conf
+++ b/client/devops/volumes/nginx/conf.d/default.conf
@@ -5,4 +5,13 @@ server {
     root /usr/share/nginx/html;
 
     include /etc/nginx/common.conf;
+
+    location ~ /.well-known/acme-challenge {
+        allow all;
+        root /usr/share/nginx/html;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
