--- a/client/devops/volumes/nginx/conf.d/ssl.conf
+++ b/client/devops/volumes/nginx/conf.d/ssl.conf
@@ -7,6 +7,9 @@ server {
     ssl_certificate      /etc/nginx/certificates/cert.pem;
     ssl_certificate_key  /etc/nginx/certificates/key.pem;
 
+    ssl_certificate /etc/nginx/certificates/live/afterlife.pp.ua/fullchain.pem;
+    ssl_certificate_key /etc/nginx/certificates/live/afterlife.pp.ua/privkey.pem;
+
     error_log /var/log/nginx/error.log;
 
     # ssl_session_cache    shared:SSL:1m;
