--- a/compose-prod.yaml
+++ b/compose-prod.yaml
@@ -9,6 +9,7 @@ services:
     volumes:
       - ./client/src:/app/src
       - /home/afterlife/volumes/server/uploads/media:/usr/share/nginx/html/media/
+      - /home/afterlife/volumes/certbot/conf/:/etc/nginx/certificates/
 #      - /usr/src/app/node_modules
     restart: always
     networks:
@@ -60,6 +61,12 @@ services:
     # environment:
     #   MONGO_INITDB_ROOT_USERNAME: $CI_MONGO_INITDB_ROOT_USERNAME
     #   MONGO_INITDB_ROOT_PASSWORD: $CI_MONGO_INITDB_ROOT_PASSWORD
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - /home/afterlife/volumes/certbot/:/usr/share/nginx/html/:rw
+      - /home/afterlife/volumes/certbot/conf/:/etc/letsencrypt/:rw
+    command: certonly --webroot --webroot-path=/usr/share/nginx/html --email vitaliy.knyazev@gmail.com --agree-tos --no-eff-email -d afterlife.pp.ua
 networks:
   react-express:
   express-mongo:
