--- a/client/devops/volumes/nginx/conf.d/default.conf
+++ b/client/devops/volumes/nginx/conf.d/default.conf
@@ -11,7 +11,7 @@ server {
         root /usr/share/nginx/html;
     }
 
-    location / {
-        return 301 https://$host$request_uri;
-    }
+    #location / {
+    #    return 301 https://$host$request_uri;
+    #}
 }
