--- a/compose-prod.yaml
+++ b/compose-prod.yaml
@@ -9,7 +9,7 @@ services:
     volumes:
       #- ./client/src:/app/src
       - /home/afterlife/volumes/server/uploads/media:/usr/share/nginx/html/media/
-      - /home/afterlife/volumes/client/html:/usr/share/nginx/html
+      #- /home/afterlife/volumes/client/html:/usr/share/nginx/html
       - /home/afterlife/volumes/certbot/:/etc/nginx/certificates/letsencrypt
 #      - /usr/src/app/node_modules
     restart: always
