--- a/client/devops/volumes/nginx/conf.d/default.conf
+++ b/client/devops/volumes/nginx/conf.d/default.conf
@@ -6,10 +6,10 @@ server {
 
     include /etc/nginx/common.conf;
 
-    location ~ /.well-known/acme-challenge {
-        allow all;
-        root /usr/share/nginx/html;
-    }
+    #location ~ /.well-known/acme-challenge {
+    #    allow all;
+    #    root /usr/share/nginx/html;
+    #}
 
     #location / {
     #    return 301 https://$host$request_uri;
