--- a/compose-prod.yaml
+++ b/compose-prod.yaml
@@ -8,8 +8,8 @@ services:
     stdin_open: true
     volumes:
       #- ./client/src:/app/src
-      - /home/afterlife/volumes/server/uploads/media:/usr/share/nginx/html/media/
-      - /home/afterlife/volumes/client/html:/usr/share/nginx/html
+      #- /home/afterlife/volumes/server/uploads/media:/usr/share/nginx/html/media/
+      - /home/afterlife/volumes/public:/usr/share/nginx/html
       - /home/afterlife/volumes/certbot/:/etc/nginx/certificates/letsencrypt
 #      - /usr/src/app/node_modules
     restart: always
@@ -24,7 +24,8 @@ services:
     restart: always
     volumes:
       #- ./server/uploads:/home/afterlife/uploads
-      - /home/afterlife/volumes/server/uploads:/app/uploads
+      #- /home/afterlife/volumes/server/uploads:/app/uploads
+      - /home/afterlife/volumes/public:/app/uploads
 #      - /usr/src/app/node_modules
     depends_on:
       - mongo
