--- a/compose-prod.yaml
+++ b/compose-prod.yaml
@@ -9,7 +9,7 @@ services:
     volumes:
       #- ./client/src:/app/src
       #- /home/afterlife/volumes/server/uploads/media:/usr/share/nginx/html/media/
-      - /home/afterlife/volumes/public:/usr/share/nginx/html
+      - /home/afterlife/volumes/public/media:/usr/share/nginx/html/media
       - /home/afterlife/volumes/certbot/:/etc/nginx/certificates/letsencrypt
 #      - /usr/src/app/node_modules
     restart: always
@@ -25,7 +25,7 @@ services:
     volumes:
       #- ./server/uploads:/home/afterlife/uploads
       #- /home/afterlife/volumes/server/uploads:/app/uploads
-      - /home/afterlife/volumes/public:/app/uploads
+      - /home/afterlife/volumes/public/media:/app/uploads/media
 #      - /usr/src/app/node_modules
     depends_on:
       - mongo
