--- a/compose-prod.yaml
+++ b/compose-prod.yaml
@@ -34,20 +34,20 @@ services:
       - react-express
     expose:
       - 5000
-  mongo-express:
-    container_name: afterlife-mongo-express
-    image: mongo-express
-    restart: always
-    depends_on:
-      - mongo
-    ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_BASICAUTH_USERNAME: afterlife
-      ME_CONFIG_BASICAUTH_PASSWORD: afterlife1234
-      ME_CONFIG_MONGODB_SERVER: afterlife-mongodb
-    networks:
-      - express-mongo
+  # mongo-express:
+  #   container_name: afterlife-mongo-express
+  #   image: mongo-express
+  #   restart: always
+  #   depends_on:
+  #     - mongo
+  #   ports:
+  #     - 8081:8081
+  #   environment:
+  #     ME_CONFIG_BASICAUTH_USERNAME: afterlife
+  #     ME_CONFIG_BASICAUTH_PASSWORD: afterlife1234
+  #     ME_CONFIG_MONGODB_SERVER: afterlife-mongodb
+  #   networks:
+  #     - express-mongo
   mongo:
     container_name: afterlife-mongodb
     restart: always
@@ -63,12 +63,6 @@ services:
     # environment:
     #   MONGO_INITDB_ROOT_USERNAME: $CI_MONGO_INITDB_ROOT_USERNAME
     #   MONGO_INITDB_ROOT_PASSWORD: $CI_MONGO_INITDB_ROOT_PASSWORD
-
-  # certbot:
-  #   image: certbot/certbot:latest
-  #   volumes:
-  #     - /home/afterlife/volumes/certbot/www:/var/www/certbot:rw
-  #     - /home/afterlife/volumes/certbot/conf:/etc/letsencrypt:rw
 networks:
   react-express:
   express-mongo:
