--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -13,7 +13,7 @@ ENV TIMEZONE Europe/Kiev
 
 RUN	apk update && \
 	apk upgrade && \
-	apk add --update openssl nginx python3 python3-dev py3-pip build-base libressl-dev musl-dev libffi-dev rust cargo && \
+	apk add --update openssl nginx mc && \
 	apk add --update tzdata && \
 	cp /usr/share/zoneinfo/${TIMEZONE} /etc/localtime && \
 	echo "${TIMEZONE}" > /etc/timezone && \
@@ -29,10 +29,6 @@ RUN	apk update && \
 	mkdir /www && \
 	apk del tzdata && \
 	rm -rf /var/cache/apk/*
-
-RUN pip3 install pip --upgrade
-RUN pip3 install certbot-nginx
-RUN mkdir /etc/letsencrypt
 
 RUN cp /app/devops/volumes/nginx/nginx.conf /etc/nginx/nginx.conf && \
     cp /app/devops/volumes/nginx/common.conf /etc/nginx/common.conf && \
