--- a/client/devops/volumes/nginx/common.conf
+++ b/client/devops/volumes/nginx/common.conf
@@ -12,9 +12,9 @@ location ~* .(jpg|jpeg|png|gif|ico|css|js)$ {
 #	root /usr/share/nginx/html;
 #}
 
-location / {
-  try_files $uri /index.html;
-}
+#location / {
+#  try_files $uri /index.html;
+#}
 
 location ~ /\.ht {
     deny  all;
