--- a/client/devops/volumes/nginx/conf.d/ssl.conf
+++ b/client/devops/volumes/nginx/conf.d/ssl.conf
@@ -4,11 +4,11 @@ server {
 
     root /usr/share/nginx/html;
 
-    ssl_certificate      /etc/nginx/certificates/cert.pem;
-    ssl_certificate_key  /etc/nginx/certificates/key.pem;
+    #ssl_certificate      /etc/nginx/certificates/cert.pem;
+    #ssl_certificate_key  /etc/nginx/certificates/key.pem;
  
-    #ssl_certificate /etc/nginx/certificates/letsencrypt/afterlife.pp.ua/fullchain.pem;
-    #ssl_certificate_key /etc/nginx/certificates/letsencrypt/afterlife.pp.ua/privkey.pem;
+    ssl_certificate /etc/nginx/certificates/letsencrypt/afterlife.pp.ua/fullchain1.pem;
+    ssl_certificate_key /etc/nginx/certificates/letsencrypt/afterlife.pp.ua/privkey1.pem;
 
     error_log /var/log/nginx/error.log;
 
