--- a/client/devops/volumes/nginx/conf.d/ssl.conf
+++ b/client/devops/volumes/nginx/conf.d/ssl.conf
@@ -10,6 +10,10 @@ server {
     ssl_certificate /etc/nginx/certificates/letsencrypt/afterlife.pp.ua/fullchain1.pem;
     ssl_certificate_key /etc/nginx/certificates/letsencrypt/afterlife.pp.ua/privkey1.pem;
 
+    location / {
+        try_files $uri /index.html;
+    }
+    
     error_log /var/log/nginx/error.log;
 
     # ssl_session_cache    shared:SSL:1m;
