--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,10 @@
     "passport": "^0.5.3",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.0",
     "react-loader-spinner": "^5.3.4",
-    "react-modal": "^3.16.1",
     "react-popper": "^2.3.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
