--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,11 @@
     "jwt-decode": "^3.1.2",
     "passport": "^0.5.3",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-burger-menu": "^3.0.9",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.0",
-    "react-lazy-load-image-component": "^1.6.0",
     "react-loader-spinner": "^5.3.4",
     "react-popper": "^2.3.0",
     "react-query": "^3.39.3",
