--- a/server/devops/volumes/env/.env_dev
+++ b/server/devops/volumes/env/.env_dev
@@ -1,4 +1,4 @@
-DB_URL=mongodb://afterlife-mongodb:27017/test
+DB_URL=mongodb+srv://knyazevvlad03:G1fznPpVBEZJ8VMy@afterlife-prod-cluster.lifnkuh.mongodb.net/prod?retryWrites=true&w=majority
 ACCESS_SECRET_KEY=es!ZE>[QL]VTAQ*[+rpRYPqS<W+nJ]bq[Dx}i*u|$jMFKDRoZR-P-Z3(dn
 REFRESH_SECRET_KEY=ow7lY%5tTo]ojS-sK6f^o0V@BTV6OlI]hyvnf}Lafo(?EBGoAC+5T`54BgX9
 NODE_ENV=development
