--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,9 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-oauth2-refresh": "^2.2.0",
     "socket.io": "^4.7.1",
+    "transliteration": "^2.3.5",
+    "unique-slug": "^4.0.0",
+    "unique-username-generator": "^1.3.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
