--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "colorthief": "^2.4.0",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "passport": "^0.5.3",
@@ -34,6 +35,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.7.1",
+    "swiper": "^11.1.5",
     "wavesurfer.js": "^6.0.1",
     "web-vitals": "^2.1.4"
   },
