--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "colorthief": "^2.4.0",
+    "i18next": "^23.12.1",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "passport": "^0.5.3",
@@ -21,6 +25,7 @@
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.0",
+    "react-i18next": "^15.0.0",
     "react-loader-spinner": "^5.3.4",
     "react-popper": "^2.3.0",
     "react-query": "^3.39.3",
